--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,34 @@
         <module>netty</module>
         <module>thread</module>
         <module>kafkalog4jappender</module>
+        <module>rpcframe</module>
+        <module>kafka</module>
     </modules>
+
+    <repositories>
+        <repository>
+            <id>puhuifinance</id>
+            <name>Maven of Puhuifinance.com</name>
+            <url>http://inside.puhuifinance.com/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>cloudera</id>
+            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+        </repository>
+    </repositories>
 
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java-version>1.8</java-version>
-        <log4j-version>1.2.15</log4j-version>
+        <log4j-version>1.2.17</log4j-version>
         <org.slf4j-version>1.6.1</org.slf4j-version>
     </properties>
 
