--- a/guava/pom.xml
+++ b/guava/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>guava</artifactId>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0-jre</version>
+        </dependency>
+    </dependencies>
 
 </project>
