--- a/guava/pom.xml
+++ b/guava/pom.xml
@@ -16,7 +16,20 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>27.0-jre</version>
+            <!--<version>27.0-jre</version>-->
+            <version>16.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.lb</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
