--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>rpcframe</module>
         <module>kafka</module>
         <module>spring</module>
+        <module>flink1_13</module>
     </modules>
 
     <repositories>
@@ -49,6 +50,11 @@
         <java-version>1.8</java-version>
         <log4j-version>1.2.17</log4j-version>
         <org.slf4j-version>1.6.1</org.slf4j-version>
+
+        <scala.binary.version>2.11</scala.binary.version>
+        <scala.version>2.11.8</scala.version>
+
+        <flink113.version>1.13.1</flink113.version>
     </properties>
 
     <dependencies>
